# envault

./: .gitignore  README.md  pyproject.toml  requirements.txt
envault/: cli.py  crypto.py  share.py  vault.py
tests/: test_cli.py  test_crypto.py
