[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envault-cli"
version = "1.0.0"
description = "AES-256 encrypted .env file manager — lock, unlock, and securely share secrets with your team"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ali Kesik", email = "alikesk222@gmail.com" }]
requires-python = ">=3.10"
keywords = ["dotenv", "secrets", "encryption", "aes", "security", "devops", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/alikesk222/envault"
Repository = "https://github.com/alikesk222/envault"
Issues = "https://github.com/alikesk222/envault/issues"

[project.scripts]
envault = "envault.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["envault*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
